# InterfaceLineCommand

./: README.md  pyproject.toml  requirements.txt  setup.py
CLI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
abstract_api_creator/: api_factory.py  gemini_factory.py  teste.py
command/: command_base.py  execute.py  receptor.py  receptor_gemini.py  strategy.py
interface/: CLI.py  commands.py
