[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CLI"
version = "0.1.0"
description = "Uma aplicação CLI que compara respostas de IA's."
readme = "README.md"
authors = [{ name = "Marcos Vinicius", email = "vinicios.dfg@gmail.com" }]
dependencies = [
    "click >= 8.1.8",
]

